54.blue-green/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: pod-deploy
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-con
          image: nginx
          ports:
            - containerPort: 80
