54.blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: testing4.yogeshpawar.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myservice
            port: 
              number: 80
  tls:
  - hosts:
      - testing4.yogeshpawar.info
    secretName: echo-devopsbyexample-com
